# ultravisor

./: .credo.exs  .dialyzer_ignore.exs  .dockerignore  .formatter.exs  .gitignore  .mailmap  .sobelow-conf  .tool-versions.license  Cargo.lock.license  Cargo.toml  Dockerfile  Makefile  README.md  Taskfile.dist.yml  docker-compose.db.yml  docker-compose.yml  flake.nix  limits.sh  mix.exs  mix.lock.license  mkdocs.yaml  result  typos.toml
.github/: CODEOWNERS
.github/workflows/: docs.yml  elixir.yml  mirror.yml  pr_management.yml  prod.yml  publish_docker.yml  security.yml  stage.yml
bench/: check_ready.exs  pg_parser.exs  protocol.exs
bench/pgbouncer/: pgbouncer.conf  userlist.txt
bench/pgdog/: config.toml  users.toml
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
deploy/fly/: fly.toml
deploy/service/: service_vars.ini
deploy/upgrade/: handler.exs  prod.config
dev/postgres/: 00-setup.sql
docs/: faq.md  index.md
docs/configuration/: pool_modes.md  tenants.md  users.md
docs/connecting/: authentication.md  overview.md
docs/deployment/: fly.md
docs/development/: docs.md  installation.md  profiling.md  setup.md
docs/migrating/: pgbouncer.md
docs/monitoring/: logs.md  metrics.md
guides/: faq.md
lib/: queproc.ex  supavisor.ex  supavisor_web.ex  ultravisor.ex  ultravisor_web.ex
native/: .gitignore  Cargo.toml
native/pgparser/: Cargo.toml  README.md
native/pgparser/.cargo/: config.toml
native/pgparser/src/: lib.rs
nix/: package.nix
rel/: env.sh.eex  vm.args.eex
test/: .formatter.exs  test_helper.exs
(+216 files in other folders)
